--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="cta-holder">
                 <a
                   class="btn btn-primary mr-lg-2"
-                  href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devbook-free-bootstrap-4-book-ebook-landing-page-template-for-developers/"
+                  href="https://github.com/summerlimes/favouriterose/raw/master/The Color of Your Favourite Rose - RMM Mizan.pdf"
                   >Read Ebook For Free!</a
                 >
                 <a class="btn btn-secondary scrollto" href="#benefits-section"
