added tile, meta, descriptions, new icons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      DevBook - Bootstrap 4 Book/eBook Landing Page Template For Developers
+      TEGME - Color of Your Favourite Rose
     </title>
 
     <!-- Meta -->
@@ -10,10 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
-      content="Bootstrap 4 Book/eBook Landing Page Template For Developers"
+      name="TEGME - Color of Your Favourite Rose"
+      content="Book of Poems for Financial Freedom and Ending Climate Change"
     />
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media" />
+    <meta name="author" content="TEGME" />
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Google Font -->
@@ -35,7 +35,7 @@
         <div class="container-fluid position-relative py-3">
           <div class="logo-wrapper">
             <div class="site-logo">
-              <a class="navbar-brand" href="index.html"
+              <a class="navbar-brand" href="/"
                 ><span class="logo-text"
                   >The Color of Your Favourite Rose</span
                 ></a
@@ -231,16 +231,19 @@
           <div class="item col-12 col-md-6 col-lg-4">
             <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-                <div class="item-icon"><i class="fas fa-laptop-code"></i></div>
+                <div class="item-icon">
+                  <i class="fas fa-temperature-high"></i>
+                </div>
                 <h3 class="item-heading">
                   See why Climate change is the most prominent issues of today
                 </h3>
               </div>
               <!--//item-heading-->
               <div class="item-desc">
-                List one of your book's benefits here. Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Integer blandit consequat
-                consequat.
+                there are huge carbon footprints left behind by many countries.
+                Many of us are technologically advanced yet we do not understand
+                severe climate change! How can a nation as advanced as the
+                United States opt out of the Global Climate Change Initiative?
               </div>
               <!--//item-desc-->
             </div>
@@ -250,69 +253,17 @@
           <div class="item col-12 col-md-6 col-lg-4">
             <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-                <div class="item-icon"><i class="fab fa-js-square"></i></div>
+                <div class="item-icon"><i class="far fa-credit-card"></i></div>
                 <h3 class="item-heading">
                   Understand the traps of the modern credit culture
                 </h3>
               </div>
               <!--//item-heading-->
               <div class="item-desc">
-                List one of your book's benefits here. Orci varius natoque
-                penatibus et magnis dis parturient montes.
-              </div>
-              <!--//item-desc-->
-            </div>
-            <!--//item-inner-->
-          </div>
-          <!--//item-->
-          <div class="item col-12 col-md-6 col-lg-4">
-            <div class="item-inner p-3 p-lg-4">
-              <div class="item-header mb-3">
-                <div class="item-icon"><i class="fab fa-rocketchat"></i></div>
-                <h3 class="item-heading">
-                  Understand why the current political system is broken
-                </h3>
-              </div>
-              <!--//item-heading-->
-              <div class="item-desc">
-                List one of your book's benefits here. Orci varius natoque
-                penatibus et magnis dis parturient montes.
-              </div>
-              <!--//item-desc-->
-            </div>
-            <!--//item-inner-->
-          </div>
-          <!--//item-->
-          <div class="item col-12 col-md-6 col-lg-4">
-            <div class="item-inner p-3 p-lg-4">
-              <div class="item-header mb-3">
-                <div class="item-icon"><i class="fab fa-angular"></i></div>
-                <h3 class="item-heading">
-                  Realize the true purpose of literature and poetry
-                </h3>
-              </div>
-              <!--//item-heading-->
-              <div class="item-desc">
-                List one of your book's benefits here. Orci varius natoque
-                penatibus et magnis dis parturient montes.
-              </div>
-              <!--//item-desc-->
-            </div>
-            <!--//item-inner-->
-          </div>
-          <!--//item-->
-          <div class="item col-12 col-md-6 col-lg-4">
-            <div class="item-inner p-3 p-lg-4">
-              <div class="item-header mb-3">
-                <div class="item-icon"><i class="fas fa-code-branch"></i></div>
-                <h3 class="item-heading">
-                  Discover the CBFD system
-                </h3>
-              </div>
-              <!--//item-heading-->
-              <div class="item-desc">
-                List one of your book's benefits here. Orci varius natoque
-                penatibus et magnis dis parturient montes.
+                Everyone should know there are rules of credit, mainly for those
+                who live in our credit-culture. If we are ignoring these rules
+                of credit we may end up paying a penalty while not enjoying any
+                benefits at all!
               </div>
               <!--//item-desc-->
             </div>
@@ -323,7 +274,67 @@
             <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
                 <div class="item-icon">
-                  <i class="fas fa-hand-holding-usd"></i>
+                  <i class="fas fa-balance-scale-left"></i>
+                </div>
+                <h3 class="item-heading">
+                  Understand why the current political system is broken
+                </h3>
+              </div>
+              <!--//item-heading-->
+              <div class="item-desc">
+                We now know that very rich people and politicians don’t always
+                hear our honest pleas for attention. But why is that? We will
+                discuss why our current system is so broken and how it effects
+                our growth.
+              </div>
+              <!--//item-desc-->
+            </div>
+            <!--//item-inner-->
+          </div>
+          <!--//item-->
+          <div class="item col-12 col-md-6 col-lg-4">
+            <div class="item-inner p-3 p-lg-4">
+              <div class="item-header mb-3">
+                <div class="item-icon"><i class="fas fa-book-reader"></i></div>
+                <h3 class="item-heading">
+                  Realize the true purpose of literature and poetry
+                </h3>
+              </div>
+              <!--//item-heading-->
+              <div class="item-desc">
+                Good literature and philosophical musings cleanse our hearts and
+                make them stronger for our happiness and a more meaningful life!
+              </div>
+              <!--//item-desc-->
+            </div>
+            <!--//item-inner-->
+          </div>
+          <!--//item-->
+          <div class="item col-12 col-md-6 col-lg-4">
+            <div class="item-inner p-3 p-lg-4">
+              <div class="item-header mb-3">
+                <div class="item-icon"><i class="fas fa-cogs"></i></div>
+                <h3 class="item-heading">
+                  Discover the CBFD theory
+                </h3>
+              </div>
+              <!--//item-heading-->
+              <div class="item-desc">
+                The name of our evergreen thought is our “Creative Balance for
+                Development.” In a short form we call this the “CBFD” theory to
+                define this dynamic economic plan to bring about financial
+                liberation.
+              </div>
+              <!--//item-desc-->
+            </div>
+            <!--//item-inner-->
+          </div>
+          <!--//item-->
+          <div class="item col-12 col-md-6 col-lg-4">
+            <div class="item-inner p-3 p-lg-4">
+              <div class="item-header mb-3">
+                <div class="item-icon">
+                  <i class="fas fa-fist-raised"></i>
                 </div>
                 <h3 class="item-heading">
                   Be inspired to make a change in yourself and the world
@@ -331,8 +342,9 @@
               </div>
               <!--//item-heading-->
               <div class="item-desc">
-                List one of your book's benefits here. Orci varius natoque
-                penatibus et magnis dis parturient montes.
+                Let us now build positive changes through a business
+                organization such as “TEGME", by utilzing knowledge and
+                literature.
               </div>
               <!--//item-desc-->
             </div>
@@ -556,7 +568,7 @@
         <div class="text-center">
           <a
             class="btn btn-primary"
-            href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devbook-free-bootstrap-4-book-ebook-landing-page-template-for-developers/"
+            href="https://github.com/summerlimes/favouriterose/raw/master/The Color of Your Favourite Rose - RMM Mizan.pdf"
             >Get Your Copy Today</a
           >
         </div>
@@ -611,23 +623,17 @@
             <ul class="social-list list-unstyled">
               <li class="list-inline-item">
                 <a href="https://twitter.com/3rdwave_themes"
-                  ><i class="fab fa-twitter"></i
+                  ><i class="fab fa-facebook"></i
                 ></a>
               </li>
               <li class="list-inline-item">
                 <a href="https://github.com/xriley"
-                  ><i class="fab fa-github-alt"></i
+                  ><i class="fab fa-twitter"></i
                 ></a>
               </li>
               <li class="list-inline-item">
                 <a href="https://medium.com/@3rdwave_themes"
                   ><i class="fab fa-medium-m"></i
-                ></a>
-              </li>
-
-              <li class="list-inline-item">
-                <a href="https://themes.3rdwavemedia.com/"
-                  ><i class="fas fa-globe-europe"></i
                 ></a>
               </li>
             </ul>
@@ -645,15 +651,14 @@
       <div class="footer-bottom text-center py-5">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
         <small class="copyright"
-          >Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by
+          >© TEGME 2020 | Theme Created by
           <a
             class="theme-link"
             href="http://themes.3rdwavemedia.com"
             target="_blank"
             >Xiaoying Riley</a
           >
-          for developers</small
-        >
+        </small>
       </div>
     </footer>
 
