top header change

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 opportunity to help stop climate change and to gain financial
                 freedom based on our talent and dedication. This book was
                 written in a simple language to encourage anyone of any age and
-                background to become part of this desirable solution!<br />
+								background to become part of this desirable solution!<br /> <br />
                 Read my book for free to see if you agree with my ideas of our
                 current predicament and if you like my solution, then feel free
-                to buy my book and join the revolution.
+                to reach out.
               </div>
               <!--//subheading-->
 
