removed amazon button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 opportunity to help stop climate change and to gain financial
                 freedom based on our talent and dedication. This book was
                 written in a simple language to encourage anyone of any age and
-								background to become part of this desirable solution!<br /> <br />
+                background to become part of this desirable solution!<br />
+                <br />
                 Read my book for free to see if you agree with my ideas of our
                 current predicament and if you like my solution, then feel free
                 to reach out.
@@ -79,9 +80,9 @@
                   href="https://github.com/summerlimes/favouriterose/raw/master/The Color of Your Favourite Rose - RMM Mizan.pdf"
                   >Read Ebook For Free!</a
                 >
-                <a class="btn btn-secondary scrollto" href="#benefits-section"
+                <!-- <a class="btn btn-secondary scrollto" href="#benefits-section"
                   ><i class="fab fa-amazon"></i> Buy on Amazon</a
-                >
+                > -->
               </div>
               <!--//cta-holder-->
 
