--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 <br />
                 Read my book for free to see if you agree with my ideas of our
                 current predicament and if you like my solution, then feel free
-                to reach out.
+                to reach out at
+                <a href="mailto:tegme.mizan@gmail.com">tegme.mizan@gmail.com</a
+                >.
               </div>
               <!--//subheading-->
 
