edited book link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="cta-holder">
                 <a
                   class="btn btn-primary mr-lg-2"
-                  href="https://github.com/summerlimes/favouriterose/raw/master/The Color of Your Favourite Rose - RMM Mizan.pdf"
+                  href="https://github.com/tegme/favouriterose/raw/master/The%20Color%20of%20Your%20Favourite%20Rose%20-%20RMM%20Mizan.pdf"
                   >Read Ebook For Free!</a
                 >
                 <!-- <a class="btn btn-secondary scrollto" href="#benefits-section"
@@ -574,7 +574,7 @@
         <div class="text-center">
           <a
             class="btn btn-primary"
-            href="https://github.com/summerlimes/favouriterose/raw/master/The Color of Your Favourite Rose - RMM Mizan.pdf"
+            href="https://github.com/tegme/favouriterose/raw/master/The%20Color%20of%20Your%20Favourite%20Rose%20-%20RMM%20Mizan.pdf"
             >Get Your Copy Today</a
           >
         </div>
