--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      TEGME - Color of Your Favourite Rose
+      TEGME - Colour of Your Favourite Rose
     </title>
 
     <!-- Meta -->
@@ -37,7 +37,7 @@
             <div class="site-logo">
               <a class="navbar-brand" href="/"
                 ><span class="logo-text"
-                  >The Color of Your Favourite Rose</span
+                  >The Colour of Your Favourite Rose</span
                 ></a
               >
             </div>
