fixed link for get your copy

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
         <div class="text-center">
           <a
             class="btn btn-primary"
-            href="https://github.com/tegme/favouriterose/raw/master/The%20Color%20of%20Your%20Favourite%20Rose%20-%20RMM%20Mizan.pdf"
+            href="https://github.com/tegme/favouriterose/raw/master/The%20Colour%20of%20Your%20Favourite%20Rose%20-%20RMM%20Mizan.pdf"
             >Get Your Copy Today</a
           >
         </div>
